--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html class="h-full bg-white">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/bid-hub.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BidHub</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="h-full">
+    <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
